--- a/snipcart-angular-sanity/src/index.html
+++ b/snipcart-angular-sanity/src/index.html
@@ -1,14 +1,24 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SnipcartAngularSanity</title>
-  <base href="/">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <title>Keyway</title>
+    <base href="/" />
+    <meta name="description" content=""/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="fragment" content="!"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="theme-color" content="#408c71">
+    <style>body { background-color: #f2f2f2 }</style>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.0-beta.1/default/snipcart.css" />
+  </head>
+  <body>
+    <app-root></app-root>
+
+    <div hidden id="snipcart" data-api-key="MzMxN2Y0ODMtOWNhMy00YzUzLWFiNTYtZjMwZTRkZDcxYzM4"></div>
+    <script src="https://cdn.snipcart.com/themes/v3.0.0-beta.1/default/snipcart.js"></script>
+  </body>
 </html>
